2007-07-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c, src/rbgobject.h: deperecate
	rbgobj_add_abstract_but_create_instance_class() and
	move abstract-type check from .allocate to dummy #initialize.

2007-07-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_type.c: use rbgobj_init_object_class() to initialize
	object class.
	* src/rbgobj_object.c, src/global.h: add new function
	rbgobj_init_object_class().

	* src/rbgobj_object.c (rbgobj_gobject_new): check returned value of
	g_object_newv().

2007-07-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobject.h: remove unused/undefined functions
	rbgobj_boxed_ref() and rbgobj_boxed_unref().
	
	* src/rbgobject.c: new function rbgobj_invalidate_relatives().
	* src/rbgobject.c: move GObject stuffs to rbgobj_object.c again.
	* src/rbgobj_object.c: deprecate rbgobj_object_create().
	* src/rbgobj_boxed.c: deprecate rbgobj_boxed_create().

	* src/utils_callback.c: brush up.

2007-07-13  Guillaume Cottenceau

	* src/rbglib_iochannel.c, src/rbglib_maincontext.c,
	src/rbglib_mainloop.c, src/rbglib_source.c, src/rbglib_utils.c,
	src/rbgobj_boxed.c, src/rbgobj_object.c, src/rbgobj_param.c,
	src/rbgobj_paramspecs.c, src/rbgobj_signal.c, src/rbgobj_type.c,
	src/rbgobj_typeinterface.c, src/rbgobj_value.c, src/rbgobject.c,
	src/utils_int64.c: replace RTEST uses by RVAL2CBOOL

2007-07-13  Guillaume Cottenceau

	* src/rbgobj_closure.c, src/rbgobj_enums.c, src/rbgobj_object.c,
	src/rbgobj_param.c, src/rbgobj_signal.c, src/rbgobj_type.c,
	src/rbgobj_typemodule.c, src/rbgobj_value.c,
	src/rbgobj_valuetypes.c: "? Qtrue : QFalse" => CBOOL2RVAL cleanup

2007-07-10  Guillaume Cottenceau

	* src/rbgobj_boxed.c: support passing nil to RVAL2BOXED, in order
	to pass NULL to glib/gtk

2007-07-10  Guillaume Cottenceau

	* src/rbgobject.c: kou says we should use NIL_P(foo) not foo ==
	Qnil
	
2007-07-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgutil.h: mark G_BLOCK_PROC() as deprecated.