@@ -1,3 +1,8 @@
+2007-07-25  Sjoerd Simons   <sjoerd@luon.net>
+	* src/rbgobj_signal.c: Properly use the GValueArray api in emit_body.
+	Causes all values in the paramter array to be unset after emission.
+	Fixing some reference leaks.
+
 2007-07-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
 	* src/rbgobj_object.c, src/rbgobject.h: deperecate
